--- a/portfoliodemo2/index.html
+++ b/portfoliodemo2/index.html
@@ -37,10 +37,10 @@
     <!-- Información Personal -->
     <header class="header-container">
       <h1 class="main-title">David Clement</h1>
-      <p class="main-subtitle">Hola! Soy David Clement, actualmente estudiante de secundaria. Estoy aplicando a una beca para estudiar una ingenieria en softwares</p>
+      <p class="main-subtitle">Hola! Soy David Clement, actualmente estudiante de secundaria. Soy un estudiante comprometido y apasionado con un historial académico destacado y una fuerte dedicación al servicio comunitario. Mi objetivo es aprovechar la oportunidad de una beca internacional para expandir mis conocimientos, desarrollar habilidades interculturales y contribuir de manera significativa al mundo que me rodea.</p>
 
       <div class="icon-group">
-        <a href="#" class="icon-link" target="_blank"><!--link de linkedin--><svg
+        <a href="https://github.com/dclement12" class="icon-link" target="_blank"><!--link de github--><svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewBox="0 0 20 20"
@@ -51,7 +51,7 @@
             /></svg
         ></a>
         <a href="#" class="icon-link" target="_blank"
-          ><!--link de github--><svg
+          ><!--link de linkedin--><svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewBox="0 0 20 20"
@@ -61,7 +61,7 @@
               d="M4.917 18.5H1.29V6.816h3.628V18.5ZM3.101 5.222C1.941 5.222 1 4.262 1 3.102a2.101 2.101 0 0 1 4.202 0c0 1.16-.941 2.12-2.1 2.12ZM18.496 18.5h-3.62v-5.688c0-1.355-.028-3.094-1.886-3.094-1.887 0-2.176 1.473-2.176 2.996V18.5H7.19V6.816h3.48V8.41h.05c.485-.918 1.668-1.887 3.433-1.887 3.672 0 4.347 2.418 4.347 5.559V18.5h-.004Z"
             /></svg
         ></a>
-        <a href="mailto:#" class="icon-link" target="_blank"
+        <a href="mailto:davidclement02@gmail.com" class="icon-link" target="_blank"
           ><!--link de correo --><svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
@@ -84,45 +84,45 @@
       <div class="work-grid">
       <article class="project-card">
         <img
-        src="imgs/img-placeholder.jpg"
+        src="imgs/Captura de pantalla 2024-04-21 115724.png"
         alt="imagen de vista previa"
         class="preview"
         />
         <div class="card-details">
-        <h3 class="card-title">Proyecto con 2 enlaces</h3>
-        <p class="card-subtitle">Stack: HTML / CSS / Tu stack</p>
+        <h3 class="card-title"> Barra de inicio para paginas web</h3>
+        <p class="card-subtitle">Stack: HTML / CSS</p>
         <div class="link-group">
-          <a href="#" class="navigation-link" target="_blank">Vista previa ></a>
-          <a href="#" class="navigation-link" target="_blank">Código ></a>
+          <a href="https://proyecto-1davidclement.pages.dev" class="navigation-link" target="_blank">Vista previa ></a>
+          <a href="https://github.com/dclement12/proyecto-1" class="navigation-link" target="_blank">Código ></a>
         </div>
         </div>
       </article>
       <article class="project-card">
         <img
-        src="imgs/img-placeholder.jpg"
+        src="imgs/Captura de pantalla 2024-04-21 004841.png"
         alt="imagen de vista previa"
         class="preview"
         />
         <div class="card-details">
-        <h3 class="card-title">Proyecto con 1 enlace</h3>
-        <p class="card-subtitle">Stack: HTML / CSS / Tu stack</p>
+        <h3 class="card-title">Menú de imagenes con hover</h3>
+        <p class="card-subtitle">Stack: HTML / CSS </p>
         <div class="link-group">
-          <a href="#" class="navigation-link" target="_blank">Github ></a>
+          <a href="https://github.com/dclement12/proyecto-2" class="navigation-link" target="_blank">Github ></a>
         </div>
         </div>
       </article>
       <article class="project-card">
         <img
-        src="imgs/img-placeholder.jpg"
+        src="imgs/Screenshot_1.png"
         alt="imagen de vista previa"
         class="preview"
         />
         <div class="card-details">
-        <h3 class="card-title">Proyecto con 2 enlaces</h3>
-        <p class="card-subtitle">Stack: HTML / CSS / Tu stack</p>
+        <h3 class="card-title">Menú interactivo</h3>
+        <p class="card-subtitle">Stack: HTML / CSS </p>
         <div class="link-group">
-          <a href="#" class="navigation-link" target="_blank">Vista previa ></a>
-          <a href="#" class="navigation-link" target="_blank">Código ></a>
+          <a href="https://proyecto-3davidclement.pages.dev/" class="navigation-link" target="_blank">Vista previa ></a>
+          <a href="https://github.com/dclement12/proyecto-3" class="navigation-link" target="_blank">Código ></a>
         </div>
         </div>
       </article>
