--- a/portfoliodemo2/index.html
+++ b/portfoliodemo2/index.html
@@ -128,48 +128,17 @@
       </article>
       <article class="project-card">
         <img
-        src="imgs/img-placeholder.jpg"
+        src="imgs/proyecto4"
         alt="imagen de vista previa"
         class="preview"
         />
         <div class="card-details">
-        <h3 class="card-title">Proyecto con 1 enlace</h3>
-        <p class="card-subtitle">Stack: HTML / CSS / Tu stack</p>
+        <h3 class="card-title">Navegador de busqueda</h3>
+        <p class="card-subtitle">Stack: HTML / CSS</p>
         <div class="link-group">
-          <a href="#" class="navigation-link" target="_blank">Github ></a>
+          <a href="https://github.com/dclement12/proyecto-4" class="navigation-link" target="_blank">Github ></a>
         </div>
         </div>
-      </article>
-      <article class="project-card">
-        <img
-        src="imgs/img-placeholder.jpg"
-        alt="imagen de vista previa"
-        class="preview"
-        />
-        <div class="card-details">
-        <h3 class="card-title">Proyecto con 2 enlaces</h3>
-        <p class="card-subtitle">Stack: HTML / CSS / Tu stack</p>
-        <div class="link-group">
-          <a href="#" class="navigation-link" target="_blank">Vista previa ></a>
-          <a href="#" class="navigation-link" target="_blank">Código ></a>
-        </div>
-        </div>
-      </article>
-      <article class="project-card">
-        <img
-        src="imgs/img-placeholder.jpg"
-        alt="imagen de vista previa"
-        class="preview"
-        />
-        <div class="card-details">
-        <h3 class="card-title">Proyecto con 1 enlace</h3>
-        <p class="card-subtitle">Stack: HTML / CSS / Tu stack</p>
-        <div class="link-group">
-          <a href="#" class="navigation-link" target="_blank">Github ></a>
-        </div>
-        </div>
-      </article>
-      </div>
     </main>
 
     <!-- Footer-->
